--- a/src/gen/CMakeLists.txt
+++ b/src/gen/CMakeLists.txt
@@ -13,9 +13,6 @@ if(MSVC)
     PROPERTIES LINK_FLAGS -ENTRY:"mainCRTStartup")
 endif()
 
-target_link_libraries(gen base-lib)
-if(USE_SHARED_TINYXML)
-  target_link_libraries(gen ${LIBTINYXML_LIBRARY})
-else()
-  target_link_libraries(gen tinyxml)
-endif()
+target_link_libraries(gen
+  base-lib
+  ${TINYXML_LIBRARY})
