--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -5,3 +5,6 @@ add_library(net-lib
   http_headers.cpp
   http_request.cpp
   http_response.cpp)
+
+target_link_libraries(net-lib
+  ${LIBCURL_LIBRARY})
