--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -1,8 +1,13 @@
 # Aseprite Render Library
-# Copyright (C) 2001-2014 David Capello
+# Copyright (C) 2001-2015 David Capello
 
 add_library(render-lib
   get_sprite_pixel.cpp
   quantization.cpp
   render.cpp
   zoom.cpp)
+
+target_link_libraries(render-lib
+  doc-lib
+  gfx-lib
+  base-lib)
