--- a/src/cfg/CMakeLists.txt
+++ b/src/cfg/CMakeLists.txt
@@ -1,4 +1,7 @@
 # Aseprite Config Library
-# Copyright (c) 2014 David Capello
+# Copyright (c) 2014, 2015 David Capello
 
 add_library(cfg-lib cfg.cpp)
+
+target_link_libraries(cfg-lib
+  ${SIMPLEINI_LIBRARY})
