Fix order of target_link_libraries() for tests
Generic libraries at the end.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -184,7 +184,7 @@ function(find_tests dir dependencies)
 	PROPERTIES LINK_FLAGS -ENTRY:"mainCRTStartup")
     endif()
 
-    target_link_libraries(${testname} gtest ${PLATFORM_LIBS} ${ARGV})
+    target_link_libraries(${testname} gtest ${ARGV} ${PLATFORM_LIBS})
 
     if(extra_definitions)
       set_target_properties(${testname}
