--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -322,6 +322,7 @@ add_library(app-lib
   ui/editor/moving_cel_state.cpp
   ui/editor/moving_pixels_state.cpp
   ui/editor/navigate_state.cpp
+  ui/editor/pivot_helpers.cpp
   ui/editor/pixels_movement.cpp
   ui/editor/play_state.cpp
   ui/editor/scrolling_state.cpp
