Fix visual artifacts on Windows when the window is resized
Now when the user resizes the OS window (a she::Display), it generates
a kDisplayResize she::Event, and this is processed by the UI layer to
redraw the entire ui::Manager.

With this change we remove the obscure "bool" return value in
she::Display::flip() member function.

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SHE_SOURCES)
 # Allegro 4 backend
 
 if(USE_ALLEG4_BACKEND)
+  add_definitions(-DUSE_KEY_POLLER)
   if(WIN32)
     find_package(DXGuid)
     if(NOT DXGUID_FOUND)
@@ -17,11 +18,15 @@ if(USE_ALLEG4_BACKEND)
       endif()
     endif()
     include_directories(SYSTEM ${DXGUID_INCLUDE_DIR})
+  else()
+    add_definitions(-DUSE_MOUSE_POLLER)
   endif()
 
   list(APPEND SHE_SOURCES
+    alleg4/alleg_display.cpp
+    alleg4/alleg_surface.cpp
     alleg4/clock.cpp
-    alleg4/close_button.cpp
+    alleg4/display_events.cpp
     alleg4/key_poller.cpp
     alleg4/mouse_poller.cpp
     alleg4/she.cpp)
