Add a basic RGB color wheel (related to #707)

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -221,6 +221,7 @@ add_library(app-lib
   commands/cmd_save_mask.cpp
   commands/cmd_save_palette.cpp
   commands/cmd_scroll.cpp
+  commands/cmd_set_color_selector.cpp
   commands/cmd_set_loop_section.cpp
   commands/cmd_set_palette.cpp
   commands/cmd_set_palette_entry_size.cpp
@@ -312,6 +313,7 @@ add_library(app-lib
   ui/color_selector.cpp
   ui/color_sliders.cpp
   ui/color_spectrum.cpp
+  ui/color_wheel.cpp
   ui/configure_timeline_popup.cpp
   ui/context_bar.cpp
   ui/devconsole_view.cpp
