Separate extra cel concept from app::Document into app::ExtraCel class

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -258,6 +258,7 @@ add_library(app-lib
   document_range.cpp
   document_range_ops.cpp
   document_undo.cpp
+  extra_cel.cpp
   file/ase_format.cpp
   file/bmp_format.cpp
   file/file.cpp
