link SHE properly
closes #625

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -170,6 +170,7 @@ if(APPLE)
 endif()
 
 add_library(she ${SHE_SOURCES})
+target_link_libraries(she ${PLATFORM_LIBS})
 
 target_link_libraries(she
   gfx-lib
