prefer FindFreetype from cmake distribution
and don't hard-code the freetype directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,8 +215,16 @@ include_directories(${PIXMAN_INCLUDE_DIR})
 
 # freetype
 if(USE_SHARED_FREETYPE)
-  find_library(FREETYPE_LIBRARY NAMES freetype)
-  find_path(FREETYPE_INCLUDE_DIR NAMES freetype.h)
+  if(EXISTS ${CMAKE_ROOT}/Modules/FindFreetype.cmake)
+    include(${CMAKE_ROOT}/Modules/FindFreetype.cmake)
+    if(FREETYPE_FOUND)
+      set(FREETYPE_INCLUDE_DIR ${FREETYPE_INCLUDE_DIRS})
+      set(FREETYPE_LIBRARY ${FREETYPE_LIBRARIES})
+    endif()
+  else()
+    find_library(FREETYPE_LIBRARY NAMES freetype)
+    find_path(FREETYPE_INCLUDE_DIR NAMES freetype.h)
+  endif()
 else()
   set(FREETYPE_LIBRARY freetype)
   set(FREETYPE_INCLUDE_DIR ${FREETYPE_DIR}/include)
