experimental native gtk3 dialogs
this pull request basicly adds the suport for gtk3 dialogs to she
it is disabled by default and can be enabled with
cmake ... -DWITH_GTK_FILE_DIALOG_SUPPORT=ON ..
at compile time and needs the Experimental option "Use native file
dialog" in aseprite enabled.
It is currently only available on *nix and has a external dependencie on
gtkmm >= 3.*

--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -193,6 +193,12 @@ if(APPLE)
     osx/native_dialogs.mm)
 endif()
 
+if(WITH_GTK_FILE_DIALOG_SUPPORT AND UNIX AND NOT APPLE AND NOT BEOS)
+  add_definitions(-DASEPRITE_WITH_GTK_FILE_DIALOG_SUPPORT)
+  list(APPEND SHE_SOURCES
+    gtk/native_dialogs.cpp)
+endif()
+
 add_library(she ${SHE_SOURCES})
 
 target_link_libraries(she
@@ -209,4 +215,9 @@ endif()
 if(USE_SKIA_BACKEND)
   target_link_libraries(she
     ${SKIA_LIBRARIES})
+endif()
+
+if(WITH_GTK_FILE_DIALOG_SUPPORT)
+  target_link_libraries(she
+    ${GTKMM_LIBRARIES})
 endif()
