Add option to use a deprecated glibmethod
To have at least backwardcompatibility with ubuntu 15.10 a cmake option was added to make use of a deprecated glibmm method. Further testing ist need to see how far this backward compatibility works, as of know ubuntu 12.04 does not seem to work. Further an unused variable was removed, as well as a tab from src/she/CMakeLists.txt so it has no mixed intending.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ project(aseprite C CXX)
 
 option(WITH_WEBP_SUPPORT  "Enable support to load/save .webp files" off)
 option(WITH_GTK_FILE_DIALOG_SUPPORT "Enable support for the experimental native GTK File Dialog" off)
+option(WITH_DEPRECATED_GLIB_SUPPORT "Enable support for older glib versions" off)
 
 option(USE_STATIC_LIBC    "Use static version of C and C++ runtimes" off)
 option(USE_SHARED_CURL    "Use your installed copy of curl" off)
