--- a/src/she/CMakeLists.txt
+++ b/src/she/CMakeLists.txt
@@ -97,7 +97,7 @@ if(USE_SKIA_BACKEND)
       find_library(SKIA_OPENGL_LIBRARY opengl32)
       find_library(SKIA_LIBEGL_LIBRARY libEGL.dll PATH "${SKIA_BUILD_OUT_DIR}")
       if(SKIA_LIBEGL_LIBRARY)
-	add_definitions(-DSK_ANGLE=1)
+        add_definitions(-DSK_ANGLE=1)
       endif()
     endif()
   else()
@@ -194,6 +194,9 @@ if(APPLE)
 endif()
 
 if(WITH_GTK_FILE_DIALOG_SUPPORT AND UNIX AND NOT APPLE AND NOT BEOS)
+  if(WITH_DEPRECATED_GLIB_SUPPORT)
+    add_definitions(-DASEPRITE_DEPRECATED_GLIB_SUPPORT)
+  endif()
   add_definitions(-DASEPRITE_WITH_GTK_FILE_DIALOG_SUPPORT)
   list(APPEND SHE_SOURCES
     gtk/native_dialogs.cpp)
